added CSS to project

--- a/index.html
+++ b/index.html
@@ -2,11 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv=""X-UA-compatible" content=""IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href="./style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <title> Prework Study Guide </title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <header id="top">
+        <h1> Prework Study Guide</h1>
+        <img 
+        src="./assets/bowtie-cat.png"
+        alt="profile image of a cat wearing a bow tie"
+        />
+    </header>
+    <main>
+        <section class="card" id="html-section">
+            <h2>HTML</h2>
+            <ul>
+                <li>The head element contains information about the website.</li>
+                <li>The body element represents the visible content shown to the user</li> 
+            </ul>
+        </section>
+        <section class="card" id="CSS-Section">
+            <h2>CSS</h2>
+            <ul>
+                <li>CSS brings creative color and margins to our HTML, making it user appealing</li>
+                <li>A margin indicates how much space we want around the outside of an element.</li>
+                <li>A padding indicates how much space we want around the content inside an element.</li>
+            </ul>
+        </section>
+        <section class="card" id="git-section">
+            <h2>Git</h2>
+            <ul> 
+                <li>Git status: Checks what branches we are currently on</li>
+                <li>Git checkout -b branch-name: creates a new branch and switches to it</li>
+            </ul>
+        </section>
+            <section class="card" id="javascript-section">
+                <h2>Javascript</h2>
+                <ul>
+                    <li>Enter your javascript notes here</li>
+                </ul>
+            </section>
+    </main>
+    <footer>
+        <p> I can code! </p>
+    </footer>
 </body>
 </html>
