--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         src="./assets/bowtie-cat.png"
         alt="profile image of a cat wearing a bow tie"
         />
+        <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
         <section class="card" id="html-section">
@@ -48,5 +49,6 @@
     <footer>
         <p> I can code! </p>
     </footer>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
